--- a/application/AndroidManifest.xml
+++ b/application/AndroidManifest.xml
@@ -27,7 +27,7 @@
     <activity android:name="RecentSessionActivity"></activity>
     <activity android:name=".ActivityStreamActivity"></activity>
     <activity android:name=".plugin.twitter.TwitterLoginActivity" android:theme="@android:style/Theme.Dialog"></activity>
-    <activity android:name="AccountSettingActivity"></activity>
+    <activity android:name=".plugin.twitter.TwitterLogoutActivity" android:theme="@android:style/Theme.Dialog"></activity><activity android:name="AccountSettingActivity"></activity>
     <activity android:name="ContactSessionActivity"></activity>
     <receiver android:name=".plugin.local.PhoneStateReceiver">
         <intent-filter>
@@ -47,6 +47,7 @@
     <receiver android:name=".AlarmReceiver">
     </receiver>
     <activity android:name="SettingActivity"></activity>
+    
      
   </application>
 
