--- a/application/.classpath
+++ b/application/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="mixiAndroidSDK_src"/>
 	<classpathentry kind="lib" path="libs/mail.jar"/>
+	<classpathentry kind="lib" path="libs/activation.jar"/>
+	<classpathentry kind="lib" path="libs/additionnal.jar"/>
 	<classpathentry kind="output" path="target/android-classes"/>
 </classpath>
