--- a/application/AndroidManifest.xml
+++ b/application/AndroidManifest.xml
@@ -11,7 +11,7 @@
 <uses-sdk android:targetSdkVersion="8" android:minSdkVersion="8"></uses-sdk>
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 
-  <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="ContactsApplication" android:debuggable="true">
+  <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="ContactsApplication" android:debuggable="false">
     <activity android:name=".MainActivity" android:theme="@android:style/Theme.NoTitleBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
