--- a/application/AndroidManifest.xml
+++ b/application/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="org.hogeika.android.app.Contacts" android:versionName="0.0.2-SNAPSHOT" android:versionCode="2">
+  package="org.hogeika.android.app.Contacts" android:versionCode="3" android:versionName="0.0.3-SNAPSHOT">
 <uses-permission android:name="android.permission.READ_SMS"></uses-permission>
 <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
